implement remove repo

--- a/src/panhandler/templates/panhandler/repo_detail.html
+++ b/src/panhandler/templates/panhandler/repo_detail.html
@@ -45,6 +45,7 @@
         </table>
         </p>
         <a href="/panhandler/update_repo/{{ repo_name }}" class="btn btn-secondary mr-2">Update To Latest</a>
+        <a href="/panhandler/remove_repo/{{ repo_name }}" class="btn btn-danger mr-2">Remove Repository</a>
         <a href="/panhandler/repos" class="btn btn-primary mr-2">Repositories</a>
 
     </div>
