--- a/src/panhandler/templates/panhandler/repos.html
+++ b/src/panhandler/templates/panhandler/repos.html
@@ -3,6 +3,8 @@
 
 {% block content %}
 
+<h2 class="mb-4">Imported Repositories</h2>
+
 {% for repo in repos %}
 
 {% if forloop.counter0|divisibleby:2 %}
