use descr instead of label

--- a/src/panhandler/templates/panhandler/repo_detail.html
+++ b/src/panhandler/templates/panhandler/repo_detail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="card border-primary mb-6 shadow-lg">
-    <div class="card-header">Repository Detail for {{ repo_name }}</div>
+    <div class="card-header">Repository Detail for {{ repo_detail.label }}</div>
     <div class="card-body">
         <h5 class="card-title">Details</h5>
         <p class="card-text">
