--- a/src/panhandler/templates/panhandler/repos.html
+++ b/src/panhandler/templates/panhandler/repos.html
@@ -17,7 +17,7 @@
     <div class="col-sm-6">
         <div class="card shadow-lg">
             <div class="card-body">
-                <h5 class="card-title">{{ repo.label }}</h5>
+                <h5 class="card-title">{{ repo.name }}</h5>
                 <p class="card-text">{{ repo.description }}</p>
                 <a href="/panhandler/repo_detail/{{ repo.name }}" class="btn btn-primary">Detail</a>
             </div>
