--- a/src/panhandler/templates/panhandler/collections.html
+++ b/src/panhandler/templates/panhandler/collections.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h1>Skillet Collections</h1>
+<h3 class="mb-4">Skillet Collections</h3>
 
 {% for collection in collections %}
 
@@ -26,7 +26,7 @@
                 </p>
 
             </div>
-            <div class="card-footer">
+            <div class="card-footer text-right">
                 <a href="/panhandler/collection/{{ collection }}" class="btn btn-primary">Go</a>
             </div>
         </div>
