--- a/src/panhandler/templates/panhandler/collection.html
+++ b/src/panhandler/templates/panhandler/collection.html
@@ -2,33 +2,37 @@
 {% load static %}
 {% block head %}
     <script src="{% static 'js/shuffle.min.js' %}"></script>
-
 {% endblock %}
 {% block content %}
 
     <h3 class="mb-4">Skillet Collection: {{ collection }}</h3>
-    <label for="sort_buttons" class="text-muted d-block">Sort</label>
-    <div class="btn-group" role="group" aria-label="..." id="sort_buttons">
-        <button type="button" class="btn btn-outline-secondary" id="sort_name">Name</button>
-        <button type="button" class="btn btn-outline-secondary" id="sort_type">Type</button>
-    </div>
+
     <div class="d-flex justify-content-between">
         <div>
-            <label for="filter_buttons" class="text-muted d-block">Filter</label>
-            <div class="btn-group" role="group" aria-label="..." id="filter_buttons">
-                <button type="button" class="btn btn-outline-secondary" id="filter_panos">PAN-OS</button>
-                <button type="button" class="btn btn-outline-secondary" id="filter_panorama">Panorama</button>
+            <label for="sort_buttons" class="text-muted d-block">Sort</label>
+            <div class="btn-group" role="group" aria-label="..." id="sort_buttons">
+                <button type="button" class="btn btn-outline-secondary" id="sort_name">Name</button>
+                <button type="button" class="btn btn-outline-secondary" id="sort_type">Type</button>
             </div>
         </div>
         <div>
-            <label for="search_buttons" class="text-muted d-block">Filter</label>
+            <label for="filter_buttons" class="text-muted d-block">Filter</label>
+            <div class="btn-group" role="group" id="filter_buttons">
+                <button type="button" class="btn btn-outline-secondary" id="filter_panos">PAN-OS</button>
+                <button type="button" class="btn btn-outline-secondary" id="filter_panorama">Panorama</button>
+                <button type="button" class="btn btn-outline-secondary" id="filter_terraform">Terraform</button>
+                <button type="button" class="btn btn-outline-secondary" id="filter_template">Template</button>
+            </div>
+        </div>
+        <div>
+            <label for="search_collection" class="text-muted d-block">Search</label>
             <input type="text" id="search_collection"/>
         </div>
     </div>
     <div id="collection_grid" class="pb-6 mb-4 row">
         {% for skillet in skillets %}
             <div class="grid__brick mt-3 mb-3 col-6 col-md-4 col-xl-3" data-name="{{ skillet.label }}"
-                 data-groups=["{{ skillet.type }}"] data-label="{{ skillet.label }}">
+                 data-groups=["{{ skillet.type }}"] data-skillet_type="{{ skillet.type }}">
                 <div class="card shadow-lg">
                     <div class="card-header">
                         {{ skillet.label }}
@@ -49,6 +53,39 @@
     </div>
 
     <script type="text/javascript">
+
+        function clear_filter_buttons() {
+            let selector = $("[id^=filter_]");
+            selector.removeClass('bg-primary text-white');
+        }
+
+        function clear_sort_buttons() {
+            let selector = $("[id^=sort_]");
+            selector.removeClass('bg-primary text-white');
+        }
+
+        function perform_filter(ele, filter_term) {
+            clear_filter_buttons();
+            $('#search_collection').val('');
+            if (shuffleInstance.group === filter_term) {
+                shuffleInstance.filter();
+                return;
+            }
+            $(ele).addClass('bg-primary text-white');
+            shuffleInstance.filter(filter_term);
+        }
+
+        function perform_sort(ele, sort_term) {
+            clear_sort_buttons();
+            $(ele).addClass('bg-primary text-white');
+            let sort_options = {
+                'by': function (element) {
+                    return $(element).data(sort_term)
+                }
+            };
+            shuffleInstance.sort(sort_options);
+        }
+
         // var shuffleInstance;
         $(document).ready(function () {
             window.shuffleInstance = new Shuffle(document.getElementById('collection_grid'), {
@@ -58,63 +95,41 @@
         });
 
         $('#sort_name').on('click', function () {
-                $("[id^=sort_").removeClass('btn-secondary');
-                $("[id^=sort_").addClass('btn-outline-secondary');
-                $(this).removeClass('btn-outline-secondary');
-                $(this).addClass('btn-secondary');
-                let sort_options = {
-                    'by': function (element) {
-                        return $(element).data('name')
-                    }
-                };
-                shuffleInstance.sort(sort_options);
+                perform_sort(this, 'name');
             }
         );
 
         $('#sort_type').on('click', function () {
-                $("[id^=sort_").removeClass('btn-secondary');
-                $("[id^=sort_").addClass('btn-outline-secondary');
-                $(this).removeClass('btn-outline-secondary');
-                $(this).addClass('btn-secondary');
-                let sort_options = {
-                    'by': function (element) {
-                        return $(element).data('skillet_type');
-                    }
-                };
-                shuffleInstance.sort(sort_options);
+                perform_sort(this, 'skillet_type');
             }
         );
 
         $('#filter_panos').on('click', function () {
-                $("[id^=filter_").removeClass('btn-secondary');
-                $("[id^=filter_").addClass('btn-outline-secondary');
-                if (shuffleInstance.group === 'panos') {
-                    shuffleInstance.filter();
-                    return;
-                }
-                $(this).removeClass('btn-outline-secondary');
-                $(this).addClass('btn-secondary');
-                shuffleInstance.filter('panos');
+                perform_filter(this, 'panos');
             }
         );
         $('#filter_panorama').on('click', function () {
-                $("[id^=filter_").removeClass('btn-secondary');
-                $("[id^=filter_").addClass('btn-outline-secondary');
-                if (shuffleInstance.group === 'panorama') {
-                    shuffleInstance.filter();
-                    return;
-                }
-                $(this).removeClass('btn-outline-secondary');
-                $(this).addClass('btn-secondary');
-                shuffleInstance.filter('panorama');
+                perform_filter(this, 'panorama');
+            }
+        );
+
+        $('#filter_terraform').on('click', function () {
+                perform_filter(this, 'terraform');
+            }
+        );
+
+        $('#filter_template').on('click', function () {
+                perform_filter(this, 'template');
             }
         );
 
         $('#search_collection').on('keyup', function () {
+            clear_filter_buttons();
+            clear_sort_buttons();
             let search_text = $(this).val().toLowerCase().trim();
             shuffleInstance.filter(function (element, shuffleInstance) {
                 // var title_element = element.querySelector('.grid__brick__title');
-                let title_element = $(element).data('label');
+                let title_element = $(element).data('name');
                 let title_text = title_element.toLowerCase().trim();
 
                 {#return title_text.indexOf(search_text) !== -1;#}
