update Pan-OS to PAN-OS rnd 2

--- a/src/panhandler/templates/panhandler/welcome.html
+++ b/src/panhandler/templates/panhandler/welcome.html
@@ -7,8 +7,8 @@
         {{ title }}
     </h1>
     <p class="lead">
-        Panhandler is a tool for sharing Pan-OS configurations and configuration sets. These configs are stored and
-        shared via Git repositories. In addition to Pan-OS, Panhandler can also consume other types of repositories,
+        Panhandler is a tool for sharing PAN-OS configurations and configuration sets. These configs are stored and
+        shared via Git repositories. In addition to PAN-OS, Panhandler can also consume other types of repositories,
         such as Terraform templates, or generic network device configuration templates.
         <h4> Latest Updates: </h4>
         <ul>
