--- a/src/panhandler/templates/panhandler/repo_detail.html
+++ b/src/panhandler/templates/panhandler/repo_detail.html
@@ -30,7 +30,7 @@
             <p class="card-text">
                 {{ repo_detail.description }}
             <div class="mt-3">
-                <a href="{{ repo_detail.url }}">{{ repo_detail.url }}</a>
+                <a href="{{ repo_detail.link }}">{{ repo_detail.url }}</a>
             </div>
             </p>
             <p class="card-text mt-4 mb-4">
