implement versioning, bump requirements

--- a/src/panhandler/templates/panhandler/welcome.html
+++ b/src/panhandler/templates/panhandler/welcome.html
@@ -18,5 +18,7 @@
         <a class="btn btn-secondary btn-lg" href="/{{ app_dir }}/{{ next }}" role="button">Get Started</a>
         {% endif %}
     </p>
+
 </div>
+<p class="small grey text-center mt-5 pt-5">Version: {% include 'panhandler/version.html' %}</p>
 {%  endblock %}
