--- a/src/panhandler/templates/panhandler/repos.html
+++ b/src/panhandler/templates/panhandler/repos.html
@@ -27,4 +27,5 @@
     {% endfor %}
 </div>
     <a class="btn btn-outline-primary" href="/panhandler/import">Import Skillet Repository</a>
+    <a class="btn btn-outline-primary" href="/panhandler/update_all_repos">Update All Repositories</a>
 {% endblock %}
