--- a/src/panhandler/templates/panhandler/welcome.html
+++ b/src/panhandler/templates/panhandler/welcome.html
@@ -10,6 +10,7 @@
         Panhandler is a tool for sharing PAN-OS configurations and configuration sets. These configs are stored and
         shared via Git repositories. In addition to PAN-OS, Panhandler can also consume other types of repositories,
         such as Terraform templates, or generic network device configuration templates.
+    </p>
     <p class="lead">
         {% if documentation_link %}
         <a class="btn btn-primary btn-lg mr-2" href="{{ documentation_link }}" role="button">Learn more</a>
@@ -20,5 +21,18 @@
     </p>
 
 </div>
-<p class="small grey text-center mt-5 pt-5">Version: {% include 'panhandler/version.html' %}</p>
+<p class="small grey text-center mt-5 pt-5">
+    Build Date: {% include 'panhandler/version.html' %}
+</p>
+<p class="small grey text-center">
+    {%  if update_required == 'true' %}
+        A newer version of panhandler is available!
+        <a href="https://panhandler.readthedocs.io/en/master/updating.html">How to update Panhandler</a>
+    {% elif update_required == 'false' %}
+        This is the most recent version of Panhabndler
+    {% else %}
+        Unable to determine build status! Check your internet connection
+    {% endif %}
+</p>
+
 {%  endblock %}
