allow 10mins for docker hub to update

--- a/src/panhandler/templates/panhandler/welcome.html
+++ b/src/panhandler/templates/panhandler/welcome.html
@@ -22,7 +22,7 @@
 
 </div>
 <p class="small grey text-center mt-5 pt-5">
-    Build Date: {% include 'panhandler/version.html' %}
+    Version: {% include 'panhandler/version.html' %}
 </p>
 <p class="small grey text-center">
     {%  if update_required == 'true' %}
