docs update, collection page update for better error handling

--- a/src/panhandler/templates/panhandler/collection.html
+++ b/src/panhandler/templates/panhandler/collection.html
@@ -131,7 +131,7 @@
         );
 
         $('#filter_python').on('click', function () {
-                perform_filter(this, 'python');
+                perform_filter(this, 'python3');
             }
         );
 
