add link to skillets github search

--- a/src/panhandler/templates/panhandler/import_repo.html
+++ b/src/panhandler/templates/panhandler/import_repo.html
@@ -71,6 +71,15 @@
                     </tr>
                 {% endfor %}
                 </tbody>
+            <tbody>
+            <tr>
+                <td colspan="3" class="text-right">
+                    <a class="btn btn-outline-success" target="_blank" href="https://github.com/topics/skillets">
+                        Find More Skillets
+                    </a>
+                </td>
+            </tr>
+            </tbody>
             </table>
         </div>
     </div>
